overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -158,7 +158,7 @@ nav {
 }
 .carousel {
   background-color: #f4f4f4;
-  /* margin: 2rem 0rem 2rem 2rem; */
+  overflow: hidden;
   padding: 2rem;
 }
 .swiper {
@@ -217,7 +217,6 @@ nav {
   gap: 40px;
   color: white;
   letter-spacing: 2px;
-
   transition: all 0.3s linear;
 }
 .banner-heading > h1 {
@@ -255,6 +254,7 @@ nav {
   .main-heading h2 {
     font-size: 62px;
   }
+
   .main-div img {
     max-inline-size: 90%;
     block-size: auto;
@@ -279,6 +279,12 @@ nav {
   .main-heading h2 {
     font-size: 52px;
     transform: translate(0px, 0px);
+  }
+  .banner-heading {
+    text-align: center;
+  }
+  .banner-heading > h1 {
+    font-size: 2rem;
   }
   .main-div img {
     max-inline-size: 90%;
